# mongodb--lab

./: README.md  docker-compose.yml  loadMovies.js  pymongo_get_database.py  pymongo_index.py  pymongo_test_insert.py  pymongo_test_query.py  pymongo_test_remove.py  pymongo_test_update.py  pyproject.toml  queryMovies.js
docker/: Dockerfile
docker/docker-entrypoint-initdb.d /: mongo-init.js
